--- a/Restorant/public/css/template.css
+++ b/Restorant/public/css/template.css
@@ -1,3 +1,41 @@
 body{
      background-color:white;
 }
+
+.center {
+    display: block;
+    margin-left: 480px;
+    margin-right: auto;
+    width: 40%;
+    align: bottom;
+  }
+
+.textwelcome {
+    display: block;
+    margin-left: 570px;
+    margin-right: auto;
+    width: 40%;
+    align: bottom;
+  }
+
+.textgoodbye {
+    display: block;
+    margin-left: 670px;
+    margin-right: auto;
+    width: 40%;
+    align: bottom;
+  }
+
+.paragraph{
+    display: block;
+    margin-left: 470px;
+    margin-right: auto;
+    width: 40%;
+    text-align: center;
+}
+
+.formdata{
+    width: 100%;
+    height: 40%;
+    align: center;
+}
